Added web directory, added light tab
