# docs/swagger.json
@@ -4,48 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/login": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "description": "body",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/user.loginDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/user.LoginInfo"
-                        }
-                    }
-                }
-            }
-        },
-        "/sunblind/browse": {
+        "/api/light/browse": {
             "post": {
                 "security": [
                     {
@@ -64,14 +23,14 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.Sunblind"
+                                "$ref": "#/definitions/dto.Light"
                             }
                         }
                     }
                 }
             }
         },
-        "/sunblind/create": {
+        "/api/light/create": {
             "post": {
                 "security": [
                     {
@@ -91,7 +50,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/sunblind.saveDto"
+                            "$ref": "#/definitions/light.saveDto"
                         }
                     }
                 ],
@@ -105,7 +64,7 @@
                 }
             }
         },
-        "/sunblind/delete/{id}": {
+        "/api/light/delete/{id}": {
             "delete": {
                 "security": [
                     {
@@ -131,7 +90,7 @@
                 }
             }
         },
-        "/sunblind/order": {
+        "/api/light/order": {
             "post": {
                 "security": [
                     {
@@ -168,7 +127,226 @@
                 }
             }
         },
-        "/sunblind/toggle/{id}/{dir}": {
+        "/api/light/toggle/{id}": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "path",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/light/update/{id}": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "path",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/light.saveDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.loginDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.LoginInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/sunblind/browse": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.Sunblind"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/sunblind/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "text/plain"
+                ],
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/sunblind.saveDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/sunblind/delete/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "path",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/sunblind/order": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/sunblind/toggle/{id}/{dir}": {
             "post": {
                 "security": [
                     {
@@ -201,7 +379,7 @@
                 }
             }
         },
-        "/sunblind/update/{id}": {
+        "/api/sunblind/update/{id}": {
             "patch": {
                 "security": [
                     {
@@ -242,7 +420,7 @@
                 }
             }
         },
-        "/thermal/browse": {
+        "/api/thermal/browse": {
             "post": {
                 "security": [
                     {
@@ -268,7 +446,7 @@
                 }
             }
         },
-        "/thermal/create": {
+        "/api/thermal/create": {
             "post": {
                 "security": [
                     {
@@ -302,7 +480,7 @@
                 }
             }
         },
-        "/thermal/data": {
+        "/api/thermal/data": {
             "post": {
                 "security": [
                     {
@@ -339,7 +517,7 @@
                 }
             }
         },
-        "/thermal/delete/{id}": {
+        "/api/thermal/delete/{id}": {
             "delete": {
                 "security": [
                     {
@@ -365,7 +543,7 @@
                 }
             }
         },
-        "/thermal/order": {
+        "/api/thermal/order": {
             "post": {
                 "security": [
                     {
@@ -402,7 +580,7 @@
                 }
             }
         },
-        "/thermal/update/{id}": {
+        "/api/thermal/update/{id}": {
             "patch": {
                 "security": [
                     {
@@ -443,7 +621,7 @@
                 }
             }
         },
-        "/user/browse": {
+        "/api/user/browse": {
             "post": {
                 "security": [
                     {
@@ -480,7 +658,7 @@
                 }
             }
         },
-        "/user/create": {
+        "/api/user/create": {
             "post": {
                 "security": [
                     {
@@ -514,7 +692,7 @@
                 }
             }
         },
-        "/user/delete/{id}": {
+        "/api/user/delete/{id}": {
             "delete": {
                 "security": [
                     {
@@ -540,7 +718,7 @@
                 }
             }
         },
-        "/user/update/password/{id}": {
+        "/api/user/update/password/{id}": {
             "patch": {
                 "security": [
                     {
@@ -575,7 +753,7 @@
                 }
             }
         },
-        "/user/update/role/{id}": {
+        "/api/user/update/role/{id}": {
             "patch": {
                 "security": [
                     {
@@ -626,6 +804,26 @@
                 },
                 "Offset": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.Light": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "inputpin": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "outputpin": {
+                    "type": "integer"
+                },
+                "position": {
+                    "type": "boolean"
                 }
             }
         },
@@ -691,6 +889,20 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "light.saveDto": {
+            "type": "object",
+            "properties": {
+                "inputpin": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "outputpin": {
+                    "type": "integer"
                 }
             }
         },
