# infrastructure/light/controller.go
@@ -1,4 +1,4 @@
-package thermal
+package light
 
 import (
 	"encoding/json"
@@ -6,7 +6,7 @@ import (
 	"strconv"
 
 	"github.com/Erexo/Ventana/api/controller"
-	"github.com/Erexo/Ventana/core/entity"
+	"github.com/Erexo/Ventana/core/domain"
 	"github.com/go-chi/chi"
 )
 
@@ -21,19 +21,19 @@ func CreateController(s *Service) *Controller {
 }
 
 func (c *Controller) GetPrefix() string {
-	return "/thermal"
+	return "/light"
 }
 
 func (c *Controller) Route(r chi.Router) {
 	r.Post("/order", c.order)
 	r.Post("/browse", c.browse)
-	r.Post("/data", c.data)
 	r.Post("/create", c.create)
 	r.Patch("/update/{id}", c.update)
 	r.Delete("/delete/{id}", c.delete)
+	r.Post("/toggle/{id}", c.toggle)
 }
 
-// @Router /api/thermal/order [post]
+// @Router /api/light/order [post]
 // @Param body body []int64 true "body"
 // @Success 200 {string} plain
 // @Accept  json
@@ -57,8 +57,8 @@ func (c *Controller) order(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// @Router /api/thermal/browse [post]
-// @Success 200 {array} dto.Thermometer
+// @Router /api/light/browse [post]
+// @Success 200 {array} dto.Light
 // @Accept  json
 // @Produce  json
 // @Security ApiKeyAuth
@@ -79,30 +79,7 @@ func (c *Controller) browse(w http.ResponseWriter, r *http.Request) {
 	w.Write(retj)
 }
 
-// @Router /api/thermal/data [post]
-// @Param body body dataDto true "body"
-// @Success 200 {array} dto.Point
-// @Accept  json
-// @Produce  json
-// @Security ApiKeyAuth
-func (c *Controller) data(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("content-type", "application/json")
-	var d dataDto
-	if err := json.NewDecoder(r.Body).Decode(&d); err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-	ret, err := c.s.GetData(d.ThermometerId, d.From, d.To)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return
-	}
-	retj, _ := json.Marshal(ret)
-	w.WriteHeader(http.StatusOK)
-	w.Write(retj)
-}
-
-// @Router /api/thermal/create [post]
+// @Router /api/light/create [post]
 // @Param body body saveDto true "body"
 // @Success 200 {string} plain
 // @Accept  json
@@ -115,12 +92,12 @@ func (c *Controller) create(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	if err := c.s.Create(d.Name, d.Sensor); err != nil {
+	if err := c.s.Create(d.Name, d.InputPin, d.OutputPin); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 }
 
-// @Router /api/thermal/update/{id} [patch]
+// @Router /api/light/update/{id} [patch]
 // @Param id path int true "path"
 // @Param body body saveDto true "body"
 // @Success 200 {string} plain
@@ -139,12 +116,12 @@ func (c *Controller) update(w http.ResponseWriter, r *http.Request) {
 		http.Error(w, err.Error(), http.StatusBadRequest)
 		return
 	}
-	if err := c.s.Update(id, d.Name, d.Sensor); err != nil {
+	if err := c.s.Update(id, d.Name, d.InputPin, d.OutputPin); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
 }
 
-// @Router /api/thermal/delete/{id} [delete]
+// @Router /api/light/delete/{id} [delete]
 // @Param id path int true "path"
 // @Success 200 {string} plain
 // @Security ApiKeyAuth
@@ -157,15 +134,30 @@ func (c *Controller) delete(w http.ResponseWriter, r *http.Request) {
 	if err := c.s.Delete(id); err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 	}
+
 }
 
-type dataDto struct {
-	ThermometerId int64           `json:"thermometerid"`
-	From          entity.UnixTime `json:"from"`
-	To            entity.UnixTime `json:"to"`
+// @Router /api/light/toggle/{id} [post]
+// @Param id path int true "path"
+// @Success 200 {string} plain
+// @Security ApiKeyAuth
+func (c *Controller) toggle(w http.ResponseWriter, r *http.Request) {
+	id, err := strconv.ParseInt(chi.URLParam(r, "id"), 10, 0)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	err, state := c.s.Toggle(id)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
+	}
+	w.WriteHeader(http.StatusOK)
+	w.Write([]byte(strconv.FormatBool(state)))
 }
 
 type saveDto struct {
-	Name   string `json:"name"`
-	Sensor string `json:"sensor"`
+	Name      string     `json:"name"`
+	InputPin  domain.Pin `json:"inputpin"`
+	OutputPin domain.Pin `json:"outputpin"`
 }
